--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								<p style="flex: 1; padding: 20px; text-align: left;">
 									Hi! I am Jan. 
 
-									Born and raised in Tübingen, I am currently  on a <a href="https://depart.moe.edu.tw/NY/cp.aspx?n=C18D75289A0D07E3&s=767040920EBF5D27" target="_blank">Huayu Enrichment Scholarship</a> stay in Taiwan, studying Taiwanese Mandarin at <a href="https://www.fcu.edu.tw/en/" target="_blank">Feng Chia University</a>. After initially pursuing studies in Law and Political Science & Public Administration, I have now found my passion in <i>Information Science</i>.
+									Born and raised in Tübingen, I recently returned from a <a href="https://depart.moe.edu.tw/NY/cp.aspx?n=C18D75289A0D07E3&s=767040920EBF5D27" target="_blank">Huayu Enrichment Scholarship</a> stay in Taiwan, studying Taiwanese Mandarin at <a href="https://www.fcu.edu.tw/en/" target="_blank">Feng Chia University</a>. After initially pursuing studies in Law and Political Science & Public Administration, I have now found my passion in <i>Information Science</i>.
 									<br>
 									<br>
 									If you want to know more about my <i>academic background & work experience</i>, you can have a look at it <a href="#work">here</a>.<br>
@@ -114,18 +114,16 @@
 							<br>
 
 							<b><u>Master</u></b><br>
-							During my Master's degree, my research interests have evolved to focus on Video Social Recommender Systems (VSRS) such as TikTok and Instagram Reels, as well as information literacy. I was particularly interested in understanding why users engage with these platforms, the contexts in which they do so, their integration into daily life, and how individuals encounter information through them. In my future research, I aim to expand this inquiry to explore the relevance criteria users apply when consuming content, the reasons behind their trust in certain information over others, and the channels they utilize when uncertain about the veracity of the information they encounter. Specifically, I am drawn to political information in contested regions, such as Taiwan and Europe, the latter of which has become increasingly contentious following the onset of the Russian invasion of Ukraine.  I believe it is crucial to understand how users establish authority regarding whom to trust on VSRS and how they navigate uncertainty in order to effectively combat misinformation campaigns on these platforms. In addition to this micro-level approach, I am also interested in expanding my research to how public institutions across different countries conceptualize information and digital literacy, as well as their strategies for planning and implementing information literacy campaigns that enhance citizens' resilience to potential online dangers, particularly on VSRS. Methodologically, my recent work has centered on developing a systematic approach to studying the use of VSRS in everyday life, which presents unique challenges due to their highly personalized nature.<br>
+							During my Master's degree, my research interests have evolved to focus on Video Social Recommender Systems (VSRS) such as TikTok and Instagram Reels, as well as information literacy. I was particularly interested in understanding why users engage with these platforms, the contexts in which they do so, their integration into daily life, and how individuals encounter information through them. In my future research, I aim to expand this inquiry to explore the relevance criteria users apply when consuming content, the reasons behind their trust in certain information over others, and the channels they utilize when uncertain about the veracity of the information they encounter. Besides VSRS, I am also passionate about Open Science, especially about Open Access and how it can transform the publishing industry after gaining momentum, as e.g. exemplified in the Open Science Policy of <a href="https://research-and-innovation.ec.europa.eu/funding/funding-opportunities/funding-programmes-and-open-calls/horizon-europe_en" target="_blank">Horizon Europe</a>.<br>
 							<br>
 
 							<b><u>Work</u></b><br>
-							I have worked in a diverse range of jobs, starting out from the fun-sounding, but for sugar-intake detrimental, work at a chocolate factory, to working in Covid-vaccination centers, to now being a student assisstant at the Editorial Office of the <a href="https://www.budrich-journals.de/index.php/dms" target="_blank">dms - der moderne Staat</a> journal at the <a href="https://www.hsu-hh.de/en/" target="_blank">Helmut-Schmidt Universität Universität der Bundeswehr Hamburg</a>.<br>
+							I have worked in a diverse range of jobs, starting out from the fun-sounding, but for sugar-intake detrimental, work at a chocolate factory, to working in Covid-vaccination centers, being a student assisstant at the Editorial Office of the <a href="https://www.budrich-journals.de/index.php/dms" target="_blank">dms - der moderne Staat</a> journal at the <a href="https://www.hsu-hh.de/en/" target="_blank">Helmut-Schmidt Universität Universität der Bundeswehr Hamburg</a>.<br>
 							Among them, the one that left the biggest mark up till now, would be my work as a student assistant for the <a href="https://www.ibi.hu-berlin.de/de/studium/studiengaenge/fernstudium" target="_blank">distant learning programme of the Institute for Library- and Information Science at the Humboldt-Universität zu Berlin</a>. Not only did I have the chance to collaborate with incredible colleagues, but I also had the opportunity to take on various responsibilities such as organising lectures and student groups, and swiftly digitizing the entire program when the Covid-19 pandemic hit. These experiences were truly invaluable and continue to shape my professional growth to this day.<br>
 							<br>
 
 							<b><u>Languages</u></b><br>
-							Apart from my academic and professional pursuits, I love learning new languages. Over time, I have achieved a level of fluency in English and jeg også snakker litt Norsk (bra nok å gå handle eller holder enkle samtaler som snakker om været). Currently, I am in learning Taiwanese Mandarin at the <a href="https://clc.fcu.edu.tw/" target="_blank">Language Center of Feng Chai University</a> in Taichung, Taiwan. So 如果你能理解這個，我熱烈歡迎你來到我的網站.<br>
-							<br>
-							If you are interested in a more formal CV, feel free to download the latest version <a href="./docs/weberjanraoul_cv.pdf" target="_blank">here</a>.
+							Apart from my academic and professional pursuits, I love learning new languages. Over time, I have achieved a level of fluency in English and jeg også snakker litt Norsk (bra nok å gå handle eller holder enkle samtaler som snakker om været). I just returned from studying Taiwanese Mandarin at the <a href="https://clc.fcu.edu.tw/" target="_blank">Language Center of Feng Chai University</a> in Taichung, Taiwan. So 如果你能理解這個，我熱烈歡迎你來到我的網站.<br>
 							</p>
 
 
@@ -161,7 +159,7 @@
 							 Below, you can find a mishmash of things that I am passionate about or simply want to share with the world:</p>
 
 							<p style="text-align: left">
-							<a href="https://www.regenbogen-potsdam.de/" target="_blank"><b><u>Regenbogen Potsdam</u></b></a>&#127752 : Regenbogen Potsdam is an association founded in 2020 during the Corona pandemic. It started out organizing a Bike-Pride Parade when social distancing was still a priority. Since joining in 2021, I cherish all the great experiences and wonderful people I have met there. Besides the annually growing Bike-Pride, Regenbogen Potsdam also works on establishing more queer events in Potsdam through a recurring "Stammtisch". Unfortunately, since leaving Potsdam in August 2024, I have become a passive member, but should you ever head to Potsdam, check out our <a href="https://www.instagram.com/regenbogenpotsdam/" target="_blank">Instagram</a> for the latet updates. <br><i>Love is for everyone. Everyone is equal</i>.</p>
+							<a href="https://www.regenbogen-potsdam.de/" target="_blank"><b><u>Regenbogen Potsdam</u></b></a>&#127752 : Regenbogen Potsdam is an association founded in 2020 during the Corona pandemic. It started out organizing a Bike-Pride Parade when social distancing was still a priority. Since joining in 2021, I cherish all the great experiences and wonderful people I have met there. Besides the annually growing Bike-Pride, Regenbogen Potsdam also works on establishing more queer events in Potsdam through a recurring "Stammtisch". Unfortunately, since leaving Potsdam in August 2024, I have become a passive member, but should you ever head to Potsdam, check out their <a href="https://www.instagram.com/regenbogenpotsdam/" target="_blank">Instagram</a> for the latet updates. <br><i>Love is for everyone. Everyone is equal</i>.</p>
 							
 							<p style="text-align: left">
 							<a href="https://www.researchgate.net/profile/Jan-Weber-25" target="_blank"><b><u>ResearchGate</u></b></a>&#127891: If you are interested in my academic work, please check out my ResearchGate profile. It is still a bit quiet there, but I hope to fill it up in the near future.
@@ -201,7 +199,7 @@
 							</header>
 
 							<p style="text-align: left">Thank you for showing interest in my work and what I do. <br>
-								If you want to get in touch, feel free to send me an email at: jan.weber[at]student.hu-berlin.de</p>
+								If you want to get in touch, feel free to send me an email at: jrweb[at]mailbox.org</p>
 						</div>
 					</section>
 
